# problem_solving

./: README.md
codeforces/assuit sheet/Level 0/sheet1condition_loop/: A. Hello World!.cpp  A. Max Subarray Sum.cpp  B. Repression.cpp  C. Domino piling.cpp  CMakeLists.txt
codeforces/assuit sheet/Sheet#01 (General Easy)/: A. Palindromes Replace.cpp  B. Watermelon.cpp  C. Koko And The Transformation.cpp  CMakeLists.txt  D. Bear and Big Brother.cpp  E. Missing Number.cpp  F. Static Range Sum Queries .cpp  I.Repetitions.cpp  P. Police Recruits.cpp
codeforces/assuit sheet/sheet#1/: A. Say Hello With C++.cpp  B. Basic Data Types.cpp  C. Simple Calculator.cpp  CMakeLists.txt  D. Difference.cpp  E. Area of a Circle.cpp  G. Summation from 1 to N.cpp  H. Two numbers.cpp  I. Welcome for you with Conditions.cpp  J. Multiples.cpp  K. Max and Min.cpp  L. The Brothers.cpp  N. Char.cpp  O. Calculator.cpp  P. First digit.cpp  Q. Coordinates of a Point.cpp  R. Age in Days.cpp  S. Interval.cpp  T. Sort Numbers.cpp  U. Float or int.cpp  V. Comparison.cpp  W. Mathematical Expression.cpp  X. Two intervals.cpp  Y. The last 2 digits.cpp  Z. Hard Compare.cpp
codeforces/assuit sheet/sheet#2 (loop)/: A. 1 to N.cpp  B. Even Numbers.cpp  C. Even, Odd, Positive and Negative .cpp  CMakeLists.txt  D. Fixed Password .cpp  E. Max.cpp  F. Multiplication table.cpp  G. Factorial.cpp  H. One Prime.cpp  I. Palindrome.cpp  J. Primes from 1 to n.cpp  K. Divisors.cpp  L. GCD.cpp  M. Lucky Numbers.cpp  N. Numbers Histogram.cpp  O. Pyramid.cpp  P. Shape1.cpp  Q. Digits.cpp  R. Sequence of Numbers and Sum.cpp  S. Sum of Consecutive Odd Numbers.cpp  T. Shape2.cpp  U. Some Sums.cpp  V. PUM.cpp  W. Shape3.cpp  X. Convert To Decimal 2.cpp  Y. Easy Fibonacci.cpp  Z. Three Numbers.cpp
codeforces/assuit sheet/sheet#3 (array)/: A. Summation.cpp  B. Searching.cpp  C. Replacement.cpp  CMakeLists.txt  D. Positions in array.cpp  E. Lowest Number.cpp  F. Reversing.cpp  G. Palindrome Array.cpp  H. Sorting.cpp  I. Smallest Pair.cpp  J. Lucky Array.cpp  K. Sum Digits.cpp  L. Max Subarray.cpp  M. Replace MinMax.cpp  N. Check Code.cpp  O. Fibonacci.cpp  P. Minimize Number.cpp  Q. Count Subarrays.cpp  R. Permutation with arrays.cpp  S. Search In Matrix.cpp  T. Matrix.cpp  U. Is B a subsequence of A.cpp  V. Frequency Array.cpp  W. Mirror Array.cpp  X. 8 Neighbors.cpp  Y. Range sum query.cpp  Z. Binary Search.cpp
codeforces/assuit sheet/sheet#4 (string)/: A. Create A New String.cpp  B. Let's use Getline.cpp  C. Compare.cpp  CMakeLists.txt  D. Strings.cpp  E. Count.cpp  F. Way Too Long Words.cpp  G. Conversion.cpp  H. Good or Bad.cpp  I. Palindrome.cpp  J. Count Letters.cpp  K. I Love strings.cpp  L. String Functions.cpp  M. Subsequence String.cpp  N. Max Subsequence.cpp  O. Sort String.cpp  P. Count Words.cpp  Q. Reverse Words.cpp  R. String Score.cpp  S. Max Split.cpp  T. URL.cpp  U. New Words.cpp  V. Replace Word.cpp  W. Encrypt  Decrypt Message.cpp  X. Comparison.cpp  Y. Min Cost String.cpp  Z. Clean Code.cpp
codeforces/assuit sheet/sheet#5(functions)/: A. Add.cpp  B. Print.cpp  C. Wonderful Number.cpp  CMakeLists.txt  D. Prime Function.cpp  E. Swap.cpp  F. Equation.cpp  G. Max and MIN.cpp  H. N Times.cpp  I. Swapping With Matrix.cpp  J. Average.cpp  K. Shift Right .cpp  L. New Array.cpp  M. Distinct Numbers.cpp  N. Shift Zeros.cpp  O. Five in One.cpp
codeforces/assuit sheet/sheet#6 (Math)/: A. Power Of Two.cpp  B. Prime checking.cpp  C. Sum of Range.cpp  CMakeLists.txt  D. Xor.cpp  E. Maximum Distinct Numbers.cpp  F. Multiplication of Matrices.cpp  G. Summation of its divisors.cpp  H. GCD.cpp  I. Divisability.cpp  J. Prime Factors.cpp  K. Combination and Permutation.cpp  L. Pascal Triangle.cpp  M. Divisible.cpp  N. Convert to Base.cpp  O. Big Add and Multiply.cpp  P. Factorial Digits.cpp  Q. Product.cpp  R. Distance points.cpp  S. Is Triangle.cpp  T. Circle Task.cpp  U. Straight Line.cpp  V. Two Lines.cpp  W. Circles.cpp  X. Rectangle.cpp  Y. Common Area.cpp
