cmake_minimum_required(VERSION 3.27)
project(Sheet_01__General_Easy_)

set(CMAKE_CXX_STANDARD 17)

add_executable(A "A. Palindromes Replace.cpp")
add_executable(B "B. Watermelon.cpp")
add_executable(C "C. Koko And The Transformation.cpp")
add_executable(D "D. Bear and Big Brother.cpp")
add_executable(E "E. Missing Number.cpp")
add_executable(F "F. Static Range Sum Queries .cpp")
add_executable(P "P. Police Recruits.cpp")
