cmake_minimum_required(VERSION 3.23)
project(sheet1)

set(CMAKE_CXX_STANDARD 14)

add_executable(A "A. Say Hello With C++.cpp")
add_executable(B "B. Basic Data Types.cpp")
add_executable(C "C. Simple Calculator.cpp")
add_executable(D "D. Difference.cpp")
add_executable(E "E. Area of a Circle.cpp")
add_executable(F "F. Digits Summation.cpp")
add_executable(G "G. Summation from 1 to N.cpp")
add_executable(H "H. Two numbers.cpp")
add_executable(I "I. Welcome for you with Conditions.cpp")
add_executable(J "J. Multiples.cpp")
add_executable(K "K. Max and Min.cpp")
add_executable(L "L. The Brothers.cpp")
