cmake_minimum_required(VERSION 3.23)
project(sheet1)

set(CMAKE_CXX_STANDARD 14)

add_executable(A "A. Say Hello With C++.cpp")
add_executable(B "B. Basic Data Types.cpp")
add_executable(C "C. Simple Calculator.cpp")
add_executable(D "D. Difference.cpp")
add_executable(E "E. Area of a Circle.cpp")
add_executable(F "F. Digits Summation.cpp")
add_executable(G "G. Summation from 1 to N.cpp")
add_executable(H "H. Two numbers.cpp")
add_executable(I "I. Welcome for you with Conditions.cpp")
add_executable(J "J. Multiples.cpp")
add_executable(K "K. Max and Min.cpp")
add_executable(L "L. The Brothers.cpp")
add_executable(M "M. Capital or Small or Digit.cpp")
add_executable(N "N. Char.cpp")
add_executable(O "O. Calculator.cpp")
add_executable(P "P. First digit.cpp")
add_executable(Q "Q. Coordinates of a Point.cpp")
add_executable(R "R. Age in Days.cpp")
add_executable(S "S. Interval.cpp")
add_executable(T "T. Sort Numbers.cpp")
add_executable(U "U. Float or int.cpp")
add_executable(V "V. Comparison.cpp")
add_executable(W "W. Mathematical Expression.cpp")
add_executable(X "X. Two intervals.cpp")
add_executable(Y "Y. The last 2 digits.cpp")
add_executable(Z "Z. Hard Compare.cpp")

