cmake_minimum_required(VERSION 3.23)
project(sheet2loop)

set(CMAKE_CXX_STANDARD 14)

add_executable(A "A. 1 to N.cpp")
add_executable(B "B. Even Numbers.cpp")
add_executable(C "C. Even, Odd, Positive and Negative .cpp")
add_executable(D "D. Fixed Password .cpp")
add_executable(E "E. Max.cpp")
add_executable(F "F. Multiplication table.cpp")
add_executable(G "G. Factorial.cpp")
add_executable(H "H. One Prime.cpp")
add_executable(I "I. Palindrome.cpp")
add_executable(J "J. Primes from 1 to n.cpp")
