cmake_minimum_required(VERSION 3.23)
project(sheet3array)

set(CMAKE_CXX_STANDARD 14)

add_executable(A "A. Summation.cpp")
add_executable(B "B. Searching.cpp")
add_executable(C "C. Replacement.cpp")
add_executable(D "D. Positions in array.cpp")
add_executable(E "E. Lowest Number.cpp")
add_executable(F "F. Reversing.cpp")
add_executable(G "G. Palindrome Array.cpp")
add_executable(H "H. Sorting.cpp")
add_executable(I "I. Smallest Pair.cpp")
add_executable(J "J. Lucky Array.cpp")
