cmake_minimum_required(VERSION 3.23)
project(sheet3array)

set(CMAKE_CXX_STANDARD 14)

add_executable(A "A. Summation.cpp")
add_executable(B "B. Searching.cpp")
add_executable(C "C. Replacement.cpp")
add_executable(D "D. Positions in array.cpp")
add_executable(E "E. Lowest Number.cpp")
add_executable(F "F. Reversing.cpp")
add_executable(G "G. Palindrome Array.cpp")
add_executable(H "H. Sorting.cpp")
add_executable(I "I. Smallest Pair.cpp")
add_executable(J "J. Lucky Array.cpp")
add_executable(K "K. Sum Digits.cpp")
add_executable(L "L. Max Subarray.cpp")
add_executable(M "M. Replace MinMax.cpp")
add_executable(N "N. Check Code.cpp")
add_executable(O "O. Fibonacci.cpp")
add_executable(P "P. Minimize Number.cpp")
add_executable(Q "Q. Count Subarrays.cpp")
add_executable(R "R. Permutation with arrays.cpp")
add_executable(S "S. Search In Matrix.cpp")
add_executable(T "T. Matrix.cpp")
add_executable(U "U. Is B a subsequence of A.cpp")
add_executable(V "V. Frequency Array.cpp")
add_executable(W "W. Mirror Array.cpp")
add_executable(Y "Y. Range sum query.cpp")
add_executable(Z "Z. Binary Search.cpp")
