cmake_minimum_required(VERSION 3.23)
project(sheet4string)

set(CMAKE_CXX_STANDARD 14)

add_executable(A "A. Create A New String.cpp")
add_executable(B "B. Let's use Getline.cpp")
add_executable(C "C. Compare.cpp")
add_executable(D "D. Strings.cpp")
add_executable(E "E. Count.cpp")
add_executable(F "F. Way Too Long Words.cpp")
