cmake_minimum_required(VERSION 3.23)
project(sheet4string)

set(CMAKE_CXX_STANDARD 14)

add_executable(A "A. Create A New String.cpp")
add_executable(B "B. Let's use Getline.cpp")
add_executable(C "C. Compare.cpp")
add_executable(D "D. Strings.cpp")
add_executable(E "E. Count.cpp")
add_executable(F "F. Way Too Long Words.cpp")
add_executable(G "G. Conversion.cpp")
add_executable(H "H. Good or Bad.cpp")
add_executable(I "I. Palindrome.cpp")
add_executable(J "J. Count Letters.cpp")
