cmake_minimum_required(VERSION 3.23)
project(sheet4string)

set(CMAKE_CXX_STANDARD 14)

add_executable(A "A. Create A New String.cpp")
add_executable(B "B. Let's use Getline.cpp")
add_executable(C "C. Compare.cpp")
add_executable(D "D. Strings.cpp")
add_executable(E "E. Count.cpp")
add_executable(F "F. Way Too Long Words.cpp")
add_executable(G "G. Conversion.cpp")
add_executable(H "H. Good or Bad.cpp")
add_executable(I "I. Palindrome.cpp")
add_executable(J "J. Count Letters.cpp")
add_executable(K "K. I Love strings.cpp")
add_executable(L "L. String Functions.cpp")
add_executable(M "M. Subsequence String.cpp")
add_executable(N "N. Max Subsequence.cpp")
add_executable(O "O. Sort String.cpp")
add_executable(P "P. Count Words.cpp")
add_executable(Q "Q. Reverse Words.cpp")
add_executable(R "R. String Score.cpp")
add_executable(S "S. Max Split.cpp")
add_executable(T "T. URL.cpp")
add_executable(U "U. New Words.cpp")
add_executable(V "V. Replace Word.cpp")
add_executable(W "W. Encrypt  Decrypt Message.cpp")
add_executable(X "X. Comparison.cpp")
add_executable(Y "Y. Min Cost String.cpp")
