cmake_minimum_required(VERSION 3.23)
project(sheet5functions)

set(CMAKE_CXX_STANDARD 14)

add_executable(A "A. Add.cpp")
add_executable(B "B. Print.cpp")
add_executable(C "C. Wonderful Number.cpp")
add_executable(D "D. Prime Function.cpp")
add_executable(E "E. Swap.cpp")
add_executable(F "F. Equation.cpp")
