cmake_minimum_required(VERSION 3.23)
project(sheet5functions)

set(CMAKE_CXX_STANDARD 14)

add_executable(A "A. Add.cpp")
add_executable(B "B. Print.cpp")
add_executable(C "C. Wonderful Number.cpp")
add_executable(D "D. Prime Function.cpp")
add_executable(E "E. Swap.cpp")
add_executable(F "F. Equation.cpp")
add_executable(G "G. Max and MIN.cpp")
add_executable(H "H. N Times.cpp")
add_executable(I "I. Swapping With Matrix.cpp")
add_executable(J "J. Average.cpp")
add_executable(K "K. Shift Right .cpp")
add_executable(L "L. New Array.cpp")
add_executable(M "M. Distinct Numbers.cpp")
add_executable(N "N. Shift Zeros.cpp")
