cmake_minimum_required(VERSION 3.23)
project(sheet6Math)

set(CMAKE_CXX_STANDARD 14)

add_executable(A "A. Power Of Two.cpp")
add_executable(B "B. Prime checking.cpp")
add_executable(C "C. Sum of Range.cpp")
add_executable(D "D. Xor.cpp")
add_executable(E "E. Maximum Distinct Numbers.cpp")
add_executable(F "F. Multiplication of Matrices.cpp")
