cmake_minimum_required(VERSION 3.23)
project(sheet6Math)

set(CMAKE_CXX_STANDARD 14)

add_executable(A "A. Power Of Two.cpp"
        "X. Rectangle.cpp")
add_executable(B "B. Prime checking.cpp")
add_executable(C "C. Sum of Range.cpp")
add_executable(D "D. Xor.cpp")
add_executable(E "E. Maximum Distinct Numbers.cpp")
add_executable(F "F. Multiplication of Matrices.cpp")
add_executable(G "G. Summation of its divisors.cpp")
add_executable(H "H. GCD.cpp")
add_executable(I "I. Divisability.cpp")
add_executable(J "J. Prime Factors.cpp")
add_executable(K "K. Combination and Permutation.cpp")
add_executable(L "L. Pascal Triangle.cpp")
add_executable(M "M. Divisible.cpp")
add_executable(N "N. Convert to Base.cpp")
add_executable(O "O. Big Add and Multiply.cpp")
add_executable(P "P. Factorial Digits.cpp")
add_executable(Q "Q. Product.cpp")
add_executable(R "R. Distance points.cpp")
add_executable(S "S. Is Triangle.cpp")
add_executable(T "T. Circle Task.cpp")
add_executable(U "U. Straight Line.cpp")
add_executable(V "V. Two Lines.cpp")
add_executable(W "W. Circles.cpp")
add_executable(X "X. Rectangle.cpp")
